chrome/browser/chromeos/login/screens/user_selection_screen.cc
@@ -99,7 +99,7 @@ bool GetEnterpriseDomain(std::string* out_domain) {
 // Get locales information of public account user.
 // Returns a list of available locales.
 // |public_session_recommended_locales|: This can be nullptr if we don't have
-// recommanded locales.
+// recommended locales.
 // |out_selected_locale|: Output value of the initially selected locale.
 // |out_multiple_locales|: Output value indicates whether we have multiple
 // recommended locales.
@@ -362,7 +362,7 @@ void UserSelectionScreen::InitEasyUnlock() {
 
 // static
 void UserSelectionScreen::FillUserDictionary(
-    user_manager::User* user,
+    const user_manager::User* user,
     bool is_owner,
     bool is_signin_to_add,
     proximity_auth::mojom::AuthType auth_type,
@@ -397,7 +397,7 @@ void UserSelectionScreen::FillUserDictionary(
 
 // static
 void UserSelectionScreen::FillMultiProfileUserPrefs(
-    user_manager::User* user,
+    const user_manager::User* user,
     base::DictionaryValue* user_dict,
     bool is_signin_to_add) {
   if (!is_signin_to_add) {
@@ -487,56 +487,6 @@ ash::mojom::UserAvatarPtr UserSelectionScreen::BuildMojoUserAvatarForUser(
   return avatar;
 }
 
-// static
-void UserSelectionScreen::FillUserMojoStruct(
-    const user_manager::User* user,
-    bool is_owner,
-    bool is_signin_to_add,
-    proximity_auth::mojom::AuthType auth_type,
-    const std::vector<std::string>* public_session_recommended_locales,
-    ash::mojom::LoginUserInfo* user_info) {
-  user_info->basic_user_info = ash::mojom::UserInfo::New();
-  user_info->basic_user_info->type = user->GetType();
-  user_info->basic_user_info->account_id = user->GetAccountId();
-  user_info->basic_user_info->display_name =
-      base::UTF16ToUTF8(user->GetDisplayName());
-  user_info->basic_user_info->display_email = user->display_email();
-  user_info->basic_user_info->avatar = BuildMojoUserAvatarForUser(user);
-  user_info->auth_type = auth_type;
-  user_info->is_signed_in = user->is_logged_in();
-  user_info->is_device_owner = is_owner;
-  user_info->can_remove = CanRemoveUser(user);
-  user_info->allow_fingerprint_unlock = AllowFingerprintForUser(user);
-
-  // Fill multi-profile data.
-  if (!is_signin_to_add) {
-    user_info->is_multiprofile_allowed = true;
-  } else {
-    GetMultiProfilePolicy(user, &user_info->is_multiprofile_allowed,
-                          &user_info->multiprofile_policy);
-  }
-
-  // Fill public session data.
-  if (user->GetType() == user_manager::USER_TYPE_PUBLIC_ACCOUNT) {
-    user_info->public_account_info = ash::mojom::PublicAccountInfo::New();
-    std::string domain;
-    if (GetEnterpriseDomain(&domain))
-      user_info->public_account_info->enterprise_domain = domain;
-
-    std::string selected_locale;
-    bool has_multiple_locales;
-    std::unique_ptr<base::ListValue> available_locales =
-        GetPublicSessionLocales(public_session_recommended_locales,
-                                &selected_locale, &has_multiple_locales);
-    DCHECK(available_locales);
-    user_info->public_account_info->available_locales =
-        lock_screen_utils::FromListValueToLocaleItem(
-            std::move(available_locales));
-    user_info->public_account_info->default_locale = selected_locale;
-    user_info->public_account_info->show_advanced_view = has_multiple_locales;
-  }
-}
-
 void UserSelectionScreen::SetHandler(LoginDisplayWebUIHandler* handler) {
   handler_ = handler;
 
@@ -561,8 +511,7 @@ void UserSelectionScreen::Init(const user_manager::UserList& users) {
 }
 
 void UserSelectionScreen::OnBeforeUserRemoved(const AccountId& account_id) {
-  for (user_manager::UserList::iterator it = users_.begin(); it != users_.end();
-       ++it) {
+  for (auto it = users_.cbegin(); it != users_.cend(); ++it) {
     if ((*it)->GetAccountId() == account_id) {
       users_.erase(it);
       break;
@@ -607,11 +556,10 @@ const user_manager::UserList UserSelectionScreen::PrepareUserListForSending(
   size_t max_non_owner_users = has_owner ? kMaxUsers - 1 : kMaxUsers;
   size_t non_owner_count = 0;
 
-  for (user_manager::UserList::const_iterator it = users.begin();
-       it != users.end(); ++it) {
-    bool is_owner = ((*it)->GetAccountId() == owner);
+  for (user_manager::User* user : users) {
+    bool is_owner = user->GetAccountId() == owner;
     bool is_public_account =
-        ((*it)->GetType() == user_manager::USER_TYPE_PUBLIC_ACCOUNT);
+        user->GetType() == user_manager::USER_TYPE_PUBLIC_ACCOUNT;
 
     if ((is_public_account && !is_signin_to_add) || is_owner ||
         (!is_public_account && non_owner_count < max_non_owner_users)) {
@@ -619,11 +567,11 @@ const user_manager::UserList UserSelectionScreen::PrepareUserListForSending(
         ++non_owner_count;
       if (is_owner && users_to_send.size() > kMaxUsers) {
         // Owner is always in the list.
-        users_to_send.insert(users_to_send.begin() + (kMaxUsers - 1), *it);
+        users_to_send.insert(users_to_send.begin() + (kMaxUsers - 1), user);
         while (users_to_send.size() > kMaxUsers)
           users_to_send.erase(users_to_send.begin() + kMaxUsers);
       } else if (users_to_send.size() < kMaxUsers) {
-        users_to_send.push_back(*it);
+        users_to_send.push_back(user);
       }
     }
   }
@@ -803,16 +751,15 @@ UserSelectionScreen::UpdateAndReturnUserListForWebUI() {
 
   user_auth_type_map_.clear();
 
-  for (user_manager::UserList::const_iterator it = users_to_send_.begin();
-       it != users_to_send_.end(); ++it) {
-    const AccountId& account_id = (*it)->GetAccountId();
+  for (const user_manager::User* user : users_to_send_) {
+    const AccountId& account_id = user->GetAccountId();
     bool is_owner = (account_id == owner);
     const bool is_public_account =
-        ((*it)->GetType() == user_manager::USER_TYPE_PUBLIC_ACCOUNT);
+        user->GetType() == user_manager::USER_TYPE_PUBLIC_ACCOUNT;
     const proximity_auth::mojom::AuthType initial_auth_type =
         is_public_account
             ? proximity_auth::mojom::AuthType::EXPAND_THEN_USER_CLICK
-            : (ShouldForceOnlineSignIn(*it)
+            : (ShouldForceOnlineSignIn(user)
                    ? proximity_auth::mojom::AuthType::ONLINE_SIGN_IN
                    : proximity_auth::mojom::AuthType::OFFLINE_PASSWORD);
     user_auth_type_map_[account_id] = initial_auth_type;
@@ -823,9 +770,9 @@ UserSelectionScreen::UpdateAndReturnUserListForWebUI() {
                 public_session_recommended_locales_.end()
             ? nullptr
             : &public_session_recommended_locales_[account_id];
-    FillUserDictionary(*it, is_owner, is_signin_to_add, initial_auth_type,
+    FillUserDictionary(user, is_owner, is_signin_to_add, initial_auth_type,
                        public_session_recommended_locales, user_dict.get());
-    user_dict->SetBoolean(kKeyCanRemove, CanRemoveUser(*it));
+    user_dict->SetBoolean(kKeyCanRemove, CanRemoveUser(user));
     users_list->Append(std::move(user_dict));
   }
 
@@ -842,39 +789,75 @@ UserSelectionScreen::UpdateAndReturnUserListForMojo() {
 
   user_auth_type_map_.clear();
 
-  for (user_manager::UserList::const_iterator it = users_to_send_.begin();
-       it != users_to_send_.end(); ++it) {
-    const AccountId& account_id = (*it)->GetAccountId();
+  for (const user_manager::User* user : users_to_send_) {
+    const AccountId& account_id = user->GetAccountId();
     bool is_owner = owner == account_id;
     const bool is_public_account =
-        ((*it)->GetType() == user_manager::USER_TYPE_PUBLIC_ACCOUNT);
+        user->GetType() == user_manager::USER_TYPE_PUBLIC_ACCOUNT;
     const proximity_auth::mojom::AuthType initial_auth_type =
         is_public_account
             ? proximity_auth::mojom::AuthType::EXPAND_THEN_USER_CLICK
-            : (ShouldForceOnlineSignIn(*it)
+            : (ShouldForceOnlineSignIn(user)
                    ? proximity_auth::mojom::AuthType::ONLINE_SIGN_IN
                    : proximity_auth::mojom::AuthType::OFFLINE_PASSWORD);
     user_auth_type_map_[account_id] = initial_auth_type;
 
-    ash::mojom::LoginUserInfoPtr login_user_info =
-        ash::mojom::LoginUserInfo::New();
-    const std::vector<std::string>* public_session_recommended_locales =
-        public_session_recommended_locales_.find(account_id) ==
-                public_session_recommended_locales_.end()
-            ? nullptr
-            : &public_session_recommended_locales_[account_id];
-    FillUserMojoStruct(*it, is_owner, is_signin_to_add, initial_auth_type,
-                       public_session_recommended_locales,
-                       login_user_info.get());
-    login_user_info->can_remove = CanRemoveUser(*it);
+    ash::mojom::LoginUserInfoPtr user_info = ash::mojom::LoginUserInfo::New();
+    user_info->basic_user_info = ash::mojom::UserInfo::New();
+    user_info->basic_user_info->type = user->GetType();
+    user_info->basic_user_info->account_id = user->GetAccountId();
+    user_info->basic_user_info->display_name =
+        base::UTF16ToUTF8(user->GetDisplayName());
+    user_info->basic_user_info->display_email = user->display_email();
+    user_info->basic_user_info->avatar = BuildMojoUserAvatarForUser(user);
+    user_info->auth_type = initial_auth_type;
+    user_info->is_signed_in = user->is_logged_in();
+    user_info->is_device_owner = is_owner;
+    user_info->can_remove = CanRemoveUser(user);
+    user_info->allow_fingerprint_unlock = AllowFingerprintForUser(user);
+
+    // Fill multi-profile data.
+    if (!is_signin_to_add) {
+      user_info->is_multiprofile_allowed = true;
+    } else {
+      GetMultiProfilePolicy(user, &user_info->is_multiprofile_allowed,
+                            &user_info->multiprofile_policy);
+    }
+
+    // Fill public session data.
+    if (user->GetType() == user_manager::USER_TYPE_PUBLIC_ACCOUNT) {
+      user_info->public_account_info = ash::mojom::PublicAccountInfo::New();
+      std::string domain;
+      if (GetEnterpriseDomain(&domain))
+        user_info->public_account_info->enterprise_domain = domain;
+
+      const std::vector<std::string>* public_session_recommended_locales =
+          public_session_recommended_locales_.find(account_id) ==
+                  public_session_recommended_locales_.end()
+              ? nullptr
+              : &public_session_recommended_locales_[account_id];
+      std::string selected_locale;
+      bool has_multiple_locales;
+      std::unique_ptr<base::ListValue> available_locales =
+          GetPublicSessionLocales(public_session_recommended_locales,
+                                  &selected_locale, &has_multiple_locales);
+      DCHECK(available_locales);
+      user_info->public_account_info->available_locales =
+          lock_screen_utils::FromListValueToLocaleItem(
+              std::move(available_locales));
+      user_info->public_account_info->default_locale = selected_locale;
+      user_info->public_account_info->show_advanced_view = has_multiple_locales;
+    }
+
+    user_info->can_remove = CanRemoveUser(user);
 
     // Send a request to get keyboard layouts for default locale.
     if (is_public_account && LoginScreenClient::HasInstance()) {
       LoginScreenClient::Get()->RequestPublicSessionKeyboardLayouts(
-          account_id, login_user_info->public_account_info->default_locale);
+          account_id, user_info->public_account_info->default_locale);
     }
 
-    user_info_list.push_back(std::move(login_user_info));
+    user_info_list.push_back(std::move(user_info));
   }
 
   return user_info_list;
